# lda

./: .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  appveyor.yml  build.py  build_dist.sh  meson.build  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: release.yml
.github/workflows/: release.yml
bench/: README.rst  bench_hca  bench_lda.py
continuous_integration/: download_wheels.sh  release_wheels.sh
continuous_integration/appveyor/: README.md  requirements.txt
doc/source/: api.rst  conf.py  contributing.rst  getting_started.rst  groups.rst  index.rst  installation.rst  release_howto.rst  usage.rst  whats_new.rst
lda/: __init__.py  _lda.c  _lda.pyx  _setup_hooks.py  datasets.py  gamma.c  gamma.h  lda.py  utils.py
lda/tests/: base.py  reuters.titles  test_datasets.py  test_lda.py  test_lda_reuters.py  test_lda_sparse.py  test_lda_transform.py  test_utils.py
src/lda/: datasets.py  lda.py
src/lda/data/: reuters.ldac  reuters.tokens
tests/: reuters.titles  test_datasets.py  test_lda.py  test_lda_reuters.py  test_lda_sparse.py  test_lda_transform.py  test_utils.py
