[tool.poetry]
name = "lda"
version = "2.1.0"
description = "Topic modeling with latent Dirichlet allocation"
authors = ["lda developers <lda-users@googlegroups.com>"]
license = "MPL 2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"

[tool.poetry.group.dev.dependencies]
cython = "^3.0.0"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
ruff = "^0.0.278"
oslotest = "^4.5.0"
scipy = { version = "^1.11.1", python = ">=3.9,<3.13"}
pytest = "^7.4.0"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
line-length = 99

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[build-system]
requires = ["poetry-core", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"
