[metadata]
name = lda
summary = Topic modeling with latent Dirichlet allocation
description-file =
    README.rst
author = lda developers
author-email = abr@ariddell.org
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix

[files]
packages = lda

[extension=lda._lda]
sources =
    lda/_lda.c
    lda/gamma.c

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
