[metadata]
name = lda
summary = Topic modeling with latent Dirichlet allocation
description-file =
    README.rst
author = lda developers
author-email = lda-users@googlegroups.com
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix

[files]
packages = lda

[extension=lda._lda]
sources =
    lda/_lda.c
    lda/gamma.c

[sdist]
pre-hook.sdist_pre_hook = lda._setup_hooks.sdist_pre_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
